--- a/views/hp.hbs
+++ b/views/hp.hbs
@@ -63,6 +63,7 @@
       <th scope="col">PID</th>
       <th scope="col">Name</th>
       <th scope="col">Phone</th>
+      <th scope="col">Need</th>
       <th scope="col">Description</th>
        
 
@@ -74,6 +75,7 @@
       <td>P123</td>
       <td>MARK</td>
       <td>+91-000000000</td>
+      <td>Doctor</td>
       <td>aged</td>
     </tr>
   </tbody>
