--- a/views/patient.hbs
+++ b/views/patient.hbs
@@ -50,19 +50,19 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                          <form>
+  <form action="/patient/query" method="post" class="requires-validation" novalidate>
   <!-- 2 column grid layout with text inputs for the first and last names -->
   <div class="row mb-4">
     <div class="col">
       <div class="form-outline">
-        <input type="text" id="form6Example1" class="form-control" />
-        <label class="form-label" for="form6Example1">First name</label>
+        <input type="text" id="form6Example1" name="pname" class="form-control" required/>
+        <label class="form-label" for="form6Example1">Name</label>
       </div>
     </div>
     <div class="col">
       <div class="form-outline">
-        <input type="text" id="form6Example2" class="form-control" />
-        <label class="form-label" for="form6Example2">Last name</label>
+        <input type="text" id="form6Example2" name="need" class="form-control" required/>
+        <label class="form-label" for="form6Example2">Need</label>
       </div>
     </div>
   </div>
@@ -71,26 +71,26 @@
 
   <!-- Text input -->
   <div class="form-outline mb-4">
-    <input type="text" id="form6Example4" class="form-control" />
+    <input type="text" id="form6Example4" name="addres" class="form-control" />
     <label class="form-label" for="form6Example4">Address</label>
   </div>
 
   <!-- Email input -->
   <div class="form-outline mb-4">
-    <input type="email" id="form6Example5" class="form-control" />
+    <input type="email" id="form6Example5" name="mail" class="form-control" />
     <label class="form-label" for="form6Example5">Email</label>
   </div>
 
   <!-- Number input -->
   <div class="form-outline mb-4">
-    <input type="number" id="form6Example6" class="form-control" />
+    <input type="number" id="form6Example6" name="phoneno" class="form-control" required/>
     <label class="form-label" for="form6Example6">Phone</label>
   </div>
 
   <!-- Message input -->
   <div class="form-outline mb-4">
-    <textarea class="form-control" id="form6Example7" rows="4"></textarea>
-    <label class="form-label" for="form6Example7">Illness details</label>
+    <textarea class="form-control" id="form6Example7" name="description" rows="4" required></textarea>
+    <label class="form-label" for="form6Example7">Description(patient details)</label>
   </div>
 
    
@@ -114,7 +114,7 @@
         <!-- SimpleLightbox plugin JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
         <!-- Core theme JS-->
-        <script src="javascripts/patient.js"></script>
+        <script src="/javascripts/patient.js"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
